--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TravelWise</title>
+    <link rel="stylesheet" href="/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +15,7 @@
   <body class="container-md">
     <header>
       <nav
-        class="navbar navbar-expand-lg justify-content-center bg-body-tertiary"
+        class="navbar navbar-expand-lg justify-content-center pb-4 pt-4 bg-body-tertiary"
       >
         <div class="container-fluid">
           <a class="navbar-brand" href="#">TravelWise</a>
@@ -56,6 +57,61 @@
         </div>
       </nav>
     </header>
+    <section class="">
+      <div>
+        <img
+          class="img-fluid position-relative"
+          src="/images/full-shot-travel-concept-with-landmarks.jpg"
+          alt=""
+        />
+      </div>
+      <div
+        class="position-absolute top-50 p-5 d-flex justify-content-between gap-5"
+      >
+        <div class="w-75">
+          <h1 class="fw-bolder h1">To travel is to live.</h1>
+          <p class="fw-semibold">
+            At Village Travel, we have consultants with an average of 20 years
+            experience and a passion for travel available who will work out the
+            details and create unforgettable vacations.
+          </p>
+          <hr class="border-5 border-warning" />
+        </div>
+        <div class="w-75">
+          <div class="mb-3">
+            <input
+              type="text"
+              class="form-control w-75"
+              id="exampleFormControlInput1"
+              placeholder="Enter Your Name"
+            />
+          </div>
+          <div class="mb-3">
+            <input
+              type="email"
+              class="form-control w-75 p-2"
+              id="exampleFormControlInput1"
+              placeholder="Enter Your Email"
+            />
+          </div>
+          <div class="mb-3">
+            <textarea
+              class="form-control w-75"
+              placeholder="Enter Your Message"
+              id="exampleFormControlTextarea1"
+              rows="5"
+            ></textarea>
+          </div>
+          <div class="mb-3">
+            <input
+              type="submit"
+              class="form-control w-25 bg-transparent border-4 border-warning"
+              value="Submit"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
