--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
   </head>
   <body class="container-md">
+    <!-- Header and Navbar section -->
     <header>
       <nav
         class="navbar navbar-expand-lg justify-content-center pb-4 pt-4 bg-body-tertiary"
@@ -57,7 +58,8 @@
         </div>
       </nav>
     </header>
-    <section class="">
+    <!-- Banner section -->
+    <section class="mb-5">
       <div>
         <img
           class="img-fluid position-relative"
@@ -109,6 +111,33 @@
               value="Submit"
             />
           </div>
+        </div>
+      </div>
+    </section>
+    <!-- About us section -->
+    <section class="mt-5 mb-5">
+      <div class="mb-5">
+        <h1 class="text-center">About Us</h1>
+      </div>
+      <div class="d-flex gap-5 justify-content-center align-items-center">
+        <div class="">
+          <p>
+            We will work with you to plan a worry free adventure that meets your
+            travel needs, expectations and budget. When you plan your vacation
+            with us we are there throughout the entire process. This means
+            making ourselves available to you before, during and after travel.
+            We plan river and ocean cruises, romantic honeymoon packages to
+            sunny destinations, family, adventure and wellness travel along with
+            international and domestic customized itineraries.
+          </p>
+          <button class="btn btn-warning p-2">Read More</button>
+        </div>
+        <div>
+          <img
+            class="img-fluid"
+            src="/images/reflection-lights-mountain-lake-captured-parco-ciani-lugano-switzerland.jpg"
+            alt=""
+          />
         </div>
       </div>
     </section>
