--- a/index.html
+++ b/index.html
@@ -141,6 +141,187 @@
         </div>
       </div>
     </section>
+    <!-- why best section -->
+    <section class="bg-black text-white mt-5">
+      <div class="text-center pt-4 mb-5">
+        <h2 class="mb-3 h2 fw-bold">Why We Are The Best</h2>
+        <p class="pe-5 ps-5">
+          Village Tours & Travel was founded in 1980 in Wichita, KS. Originally
+          a family-owned business with one motor coach, Village has steadily
+          grown to be one of the largest charter bus and bus tour companies in
+          the Midwest.
+        </p>
+      </div>
+      <div class="d-flex justify-content-center pb-5 align-items-center">
+        <div class="w-25 text-center">
+          <img class="img-fluid w-25" src="/images/airplane.png" alt="" />
+          <h3>Amazing Travel</h3>
+          <p class="">
+            <i
+              >Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit nullam nunc justo sagittis suscipit ultrices.</i
+            >
+          </p>
+        </div>
+        <div class="w-25 text-center">
+          <img class="img-fluid w-25" src="/images/discover.png" alt="" />
+          <h3>Discover</h3>
+          <p class="">
+            <i
+              >Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit nullam nunc justo sagittis suscipit ultrices.</i
+            >
+          </p>
+        </div>
+        <div class="w-25 text-center">
+          <img class="img-fluid w-25" src="/images/picture.png" alt="" />
+          <h3>Book Your Trip</h3>
+          <p class="">
+            <i
+              >Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit nullam nunc justo sagittis suscipit ultrices.</i
+            >
+          </p>
+        </div>
+        <div class="w-25 text-center">
+          <img class="img-fluid w-25" src="/images/help-desk.png" alt="" />
+          <h3>Nice Support</h3>
+          <p class="">
+            <i
+              >Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit nullam nunc justo sagittis suscipit ultrices.</i
+            >
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- section-4 -->
+    <section class="pb-5">
+      <div
+        class="d-flex py-5 px-2 text-black banner justify-content-between align-items-center gap-5"
+      >
+        <div class="w-75">
+          <h3 class="fw-bold">Caucasus Vacation Package</h3>
+          <p>
+            Village Tours & Travel is a diversified company with offices in
+            Wichita, Salina, Oklahoma City, Tulsa, Ft. Smith, Springfield, and
+            Springdale. We operate over 100 charter coaches, plan over 220 tours
+            annually, offer traditional travel agency services, and operate
+            daily scheduled service with Greyhound through our Bee Line Express
+            division.
+          </p>
+          <p class="h2 fw-medium">From Georgia: $180</p>
+        </div>
+        <div>
+          <button class="btn-warning btn px-4">Details</button>
+        </div>
+      </div>
+    </section>
+    <!-- Popular Cruises -->
+    <section class="py-5">
+      <div class="text-center pb-4">
+        <h3 class="text-warning h2 fw-bolder">Popular Cruises</h3>
+        <p class="px-5">
+          We have developed a suite of resources ranging from technical white
+          papers and reference charts to detailed research to help you and your
+          business.
+        </p>
+      </div>
+      <div class="d-flex gap-5 align-items-center justify-content-between">
+        <div class="w-50 border-1 border-white shadow">
+          <img
+            class="img-fluid"
+            src="/images/mainul-islam-Lkh9ZhSDxuc-unsplash.jpg"
+            alt=""
+          />
+          <h3 class="p-2">Sajek Valley</h3>
+          <p class="p-2">
+            We support this with an easy and convenient selling option for our
+            partners in the travel trade community
+          </p>
+          <hr class="border-5 border-warning" />
+        </div>
+        <div class="w-50 border-1 border-white shadow">
+          <img class="img-fluid" src="/images/goa.jpg" alt="" />
+          <h3 class="p-2">Goa</h3>
+          <p class="p-2">
+            We support this with an easy and convenient selling option for our
+            partners in the travel trade community
+          </p>
+          <hr class="border-5 border-warning" />
+        </div>
+        <div class="w-50 border-1 border-white shadow">
+          <img
+            class="img-fluid"
+            src="/images/woman-walking-kelingking-beach-nusa-penida-island-bali-indonesia.jpg"
+            alt=""
+          />
+          <h3 class="p-2">Bali</h3>
+          <p class="p-2">
+            We support this with an easy and convenient selling option for our
+            partners in the travel trade community
+          </p>
+          <hr class="border-5 border-warning" />
+        </div>
+      </div>
+    </section>
+    <!-- more package -->
+    <section class="package py-5 my-5">
+      <div>
+        <h3 class="text-center">Our More packages</h3>
+      </div>
+      <div class="d-flex gap-4 p-5 align-items-center justify-content-between">
+        <div class="w-50 shadow bg-white">
+          <img
+            class="img-fluid h-100"
+            src="/images/aerial-beautiful-shot-seashore-with-hills-background-sunset.jpg"
+            alt=""
+          />
+          <div class="px-2 pb-4 text-center">
+            <h3 class="py-2">Vacation Package</h3>
+            <button class="btn px-5 btn-warning">Read More</button>
+          </div>
+        </div>
+        <div class="w-50 shadow bg-white">
+          <img
+            class="img-fluid h-100 pb-4"
+            src="/images/painting-mountain-lake-with-mountain-background.jpg"
+            alt=""
+          />
+          <div class="px-2 pb-4 text-center">
+            <h3 class="py-2">Cruises</h3>
+            <button class="btn px-5 btn-warning">Read More</button>
+          </div>
+        </div>
+        <div class="w-50 shadow bg-white">
+          <img
+            class="img-fluid h-100 pb-3"
+            src="/images/man-hugging-woman-near-fence.jpg"
+            alt=""
+          />
+          <div class="px-2 pb-4 text-center">
+            <h3 class="py-2">Honeymoons</h3>
+            <button class="btn px-5 btn-warning">Read More</button>
+          </div>
+        </div>
+        <div class="w-50 shadow bg-white">
+          <img
+            class="img-fluid h-100"
+            src="/images/beautiful-woman-long-red-dress-walks-around-city-with-her-husband.jpg"
+            alt=""
+          />
+          <div class="px-2 pb-4 text-center">
+            <h3 class="py-2">Wedding</h3>
+            <button class="btn px-5 btn-warning">Read More</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Footer -->
+    <footer class="bg-black mt-5 py-5 px-2 text-white text-center">
+      <p>contact me : travelwise@gmail.com</p>
+      <p>@copyright 2023</p>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
